# Fitness-Tracker-Application

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt  verify_db.py
backend/app/: auth.py  main.py  seed_templates.py
backend/app/agents/: __init__.py  activity_agent.py  adk_utils.py  diet_agent.py  goal_agent.py  tools.py
backend/app/core/: cost.py
backend/app/db/: client.py
backend/app/routers/: __init__.py  agents.py  diet.py  goals.py  templates.py  workouts.py
backend/app/schemas/: __init__.py  diet.py  goal.py  template.py  user.py  workout.py
backend/app/services/: __init__.py  diet_service.py  goal_service.py  template_service.py  workout_service.py
backend/migrations/: full_schema.sql  goals.sql
ui/: App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts
ui/components/: AIChat.tsx  CalorieLog.tsx  CardioLog.tsx  DailyView.tsx  Dashboard.tsx  GoalMenu.tsx  Login.tsx  Signup.tsx  WorkoutLog.tsx
ui/components/ui/: AIResponse.tsx  Button.tsx  CustomDatePicker.tsx  CustomSelect.tsx  Toast.tsx
ui/services/: api.ts  gemini.ts  storage.ts  supabase.ts
